feat: 经营信息支持财务记录和奖金记录
